test/arrays/sparse/copyRemoteSparse.good
In initCopy(definedConst=true), domain definedConst: false; localizing
| locale | get | execute_on |
| -----: | --: | ---------: |
|      0 |  32 |          0 |
|      1 |   0 |          0 |
|      2 |   0 |          0 |
|      3 |  93 |          1 |
1.1 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 
0.0 2.2 0.0 0.0 0.0 0.0 0.0 0.0 0.0 
0.0 0.0 3.3 0.0 0.0 0.0 0.0 0.0 0.0 
0.0 0.0 0.0 4.4 0.0 0.0 0.0 0.0 0.0 
0.0 0.0 0.0 0.0 5.5 0.0 0.0 0.0 0.0 
0.0 0.0 0.0 0.0 0.0 6.6 0.0 0.0 0.0 
0.0 0.0 0.0 0.0 0.0 0.0 7.7 0.0 0.0 
0.0 0.0 0.0 0.0 0.0 0.0 0.0 8.8 0.0 
0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 9.9 
In initCopy(definedConst=false), domain definedConst: false; taking normal path
| locale | get | put | execute_on |
| -----: | --: | --: | ---------: |
|      0 |  36 |   2 |          0 |
|      1 |   0 |   0 |          0 |
|      2 |   0 |   0 |          0 |
|      3 |  32 |   0 |          3 |
copyRemoteSparse.chpl:47: error: cannot access remote data in local block
